--- a/source/stylesheets/search.sass
+++ b/source/stylesheets/search.sass
@@ -9,7 +9,7 @@
   left: 0
   bottom: 0
   right: 0
-  background-color: #{"rgba(var(--background-color-rgb),.8)"}
+  background-color: color-mix(in srgb, var(--background-color) 20%, white)
   transition: opacity 0.2s ease, visibility 0.2s ease
 
   &[aria-hidden="false"]
