--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -25,13 +25,9 @@
     grid-template-columns: 1fr
 
 .cart-header
-  display: flex
-  align-items: flex-end
-  justify-content: flex-start
-  margin-bottom: 32px
-
-  .page-title
-    margin-bottom: 0
+  display: grid
+  justify-content: flex-end
+  margin-bottom: 0
 
 .cart-items
   border-bottom: 1px solid var(--border-color)
