--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -93,7 +93,7 @@
 
 .related-products-container
   background-color: var(--accent-background-color)
-  margin-top: 60px
+  margin-top: 120px
   padding: 60px 0
 
 .related-products-title
@@ -102,3 +102,17 @@
 
 #instant-checkout-button
   margin-top: 12px
+
+.related-product-list.product-list
+  --columns: 4
+  justify-content: center
+
+  @media screen and (max-width: $break-medium)
+    justify-content: flex-start
+
+  @media screen and (max-width: $break-large)
+    --columns: 3
+    --gap: calc(var(--spacing-unit) * 2)
+  
+  @media screen and (max-width: $break-small)
+    --columns: #{"{{ theme.max_products_per_row_mobile }}"}
