--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -17,7 +17,7 @@
   @media screen and (max-width: $break-large)
     --columns: calc(#{"{{ theme.max_products_per_row }}"} - 1)
 
-  @media screen and (max-width: $break-large)
+  @media screen and (max-width: $break-medium)
     --columns: #{"{{ theme.max_products_per_row_mobile }}"}
     --gap: calc(var(--spacing-unit) * 2)
 
