--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -103,9 +103,15 @@ a.product-list-link
   line-height: normal
   display: inline-block
   padding: 6px 8px
-  color: var(--product-status-text-color)
-  background: var(--product-status-background-color)
   border-radius: var(--border-radius-sm)
+
+  &.status-primary
+    background: var(--product-status-background-color)
+    color: var(--product-status-text-color)
+
+  &.status-secondary
+    background: var(--product-status-background-color-secondary)
+    color: var(--product-status-text-color-secondary)
 
 .product-list-thumb-info
   line-height: normal
