--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -321,6 +321,21 @@ footer
     align-items: center
     row-gap: 40px
 
+    @media screen and (max-width: $break-small)  
+      .footer-nav-links:nth-child(n+2), .footer-nav-social
+        position: relative
+        margin-top: 20px
+        &::after
+          content: ""
+          position: absolute
+          top: 0
+          left: 50%
+          transform: translateX(-50%)
+          width: 25px
+          max-width: 100%
+          border-top: 1px solid var(--border-color)
+          margin-top: -20px
+
 .footer-store-name
   font-size: 1.5em
   line-height: 30px
