--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -31,6 +31,7 @@
   --product-status-background-color-secondary: #{"{{ theme.product_status_background_color_secondary }}"}
   --product-status-text-color-secondary: #{"{{ theme.product_status_text_color_secondary }}"}
 
+  --inventory-status-text-color: #{"{{ theme.inventory_status_text_color }}"}
 
   --shop-name-font: #{'{{ theme.shop_name_font | font_family }}'}
   --primary-font: #{'{{ theme.primary_font | font_family }}'}
