--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -336,6 +336,17 @@ footer
           border-top: 1px solid var(--border-color)
           margin-top: -20px
 
+.footer-custom-content
+  display: grid
+  grid-template-columns: 1fr
+  justify-content: center
+  text-align: center
+  padding: 10px 16px 40px 16px
+  gap: 20px
+
+  > *
+    justify-self: center
+
 .footer-store-name
   font-size: 1.5em
   line-height: 30px
