chore: adjust welcome message text size across breakpoints

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -29,8 +29,11 @@
   padding: 0 var(--spacing-unit)
   width: 100%
 
+  @media screen and (max-width: $break-medium)
+    font-size: 2.5em
+
   @media screen and (max-width: $break-small)
-    font-size: 1.5em
+    font-size: 1.75em
 
 .welcome-image
   border-radius: var(--border-radius)
