--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,3 +1,8 @@
+\:root
+  --pagination-background: transparent
+  --pagination-page-background: var(--primary-text-color)
+  --pagination-active-page: var(--primary-text-color)
+
 .home-welcome
   display: grid
   border-radius: var(--border-radius)
@@ -5,18 +10,28 @@
   position: relative
   align-items: center
   padding: 0 20px
-  margin-bottom: 80px
+  margin-bottom: 60px
 
   &.stacked
     grid-template-rows: 1fr
+    isolation: isolate
 
     .welcome-image
       grid-area: 1 / 1
       z-index: 1
 
-    .welcome-message
+    .home-slideshow
+      grid-area: 1 / 1
+      z-index: 1
+
+    .welcome-overlay
       grid-area: 1 / 1
       z-index: 2
+
+    .welcome-message
+      grid-area: 1 / 1
+      z-index: 5
+      position: relative
 
   @media screen and (max-width: $break-small)
     border-radius: 0
@@ -43,6 +58,14 @@
 
   @media screen and (max-width: $break-small)
     border-radius: 0
+
+.welcome-overlay
+  width: 100%
+  height: 100%
+  margin: 0 auto
+  display: block
+  opacity: #{"{{ theme.welcome_overlay_opacity }}"}
+  background: black
 
 .featured-category
   display: flex
@@ -135,3 +158,58 @@ a.button.all-products-button
 
   @media screen and (max-width: $break-small)
     max-width: calc(100% - var(--spacing-unit) * 2)
+
+.home-slideshow
+  background: var(--welcome-background-color)
+
+  .splide__slide
+    &::before
+      content: ""
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      // Important: Make height only cover the slide image, not the pagination area
+      height: 100%
+      background: black
+      opacity: #{"{{ theme.welcome_overlay_opacity }}"}
+      z-index: 2
+
+  .slideshow-image
+    border-radius: var(--border-radius)
+    width: 100%
+
+  .splide__arrow
+    border-radius: var(--border-radius)
+    width: 2em
+    height: 3em
+
+  .splide__pagination
+    z-index: 3
+    background: var(--pagination-background)
+    border-radius: 18px
+    display: inline-flex
+    position: relative
+    margin-top: 8px
+    bottom: auto
+    align-items: center
+    justify-content: center
+    transform: translateX(-50%)
+    left: 50%
+    padding: 4px 8px
+    gap: 2px
+    right: auto
+
+    li
+      display: flex
+
+    .splide__pagination__page
+      opacity: 1
+      background: none
+      border: 1px solid var(--pagination-page-background)
+      height: 10px
+      width: 10px
+
+      &.is-active
+        background: var(--pagination-active-page)
+        transform: scale(1.1)
