--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -14,6 +14,9 @@ body
     overflow: hidden
     overscroll-behavior: none
 
+.content
+  margin-bottom: 100px
+
 a.skip-link
   +transition(all .3s)
   background: var(--background-color)
