fix: homepage slide should show full width when single image

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -163,6 +163,8 @@ a.button.all-products-button
   background: var(--welcome-background-color)
 
   .splide__slide
+    width: 100%
+
     &::before
       content: ""
       position: absolute
