chore: allow images to be centered on custom pages and product descriptions

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -87,6 +87,12 @@
 
     a
       text-decoration: underline
+    
+    img 
+      display: inline-block
+      margin: 0 auto
+      max-width: 100%
+      margin-bottom: 16px
 
 .all-related-products
   display: none
