--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -142,6 +142,12 @@ h1
 
   a
     text-decoration: underline
+  
+  img 
+    display: inline-block
+    margin: 0 auto
+    max-width: 100%
+    margin-bottom: 16px
 
 .lookbook-gallery
   text-align: center
