--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -129,3 +129,39 @@
   
   @media screen and (max-width: $break-small)
     --columns: #{"{{ theme.max_products_per_row_mobile }}"}
+  
+#payment-processor-messaging
+  margin: 20px 0 0
+  width: 100%
+  display: block
+  
+  body[data-bc-page-type="product"] &
+    margin: 0
+
+  body[data-bc-page-type="cart"] &
+    margin-bottom: 10px
+
+  &.display-flex
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+    &.dual-messaging
+      gap: 15px
+
+  &.display-grid
+    display: grid
+  
+  &.hidden
+    position: absolute
+    left: -9999px
+    top: -9999px
+
+  > div
+    margin-bottom: 0
+  
+  // Only apply the margin for non-flex layouts when dual messaging is present
+  &:not(.display-flex)
+    &.dual-messaging > div.visible:first-of-type
+      margin-bottom: 15px
