fix: iframes on custom pages (e.g. YouTube Embeds) will be centered automatically

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -148,6 +148,12 @@ h1
     margin: 0 auto
     max-width: 100%
     margin-bottom: 16px
+  
+  iframe
+    display: block
+    margin: 0 auto
+    max-width: 100%
+    margin-bottom: 16px
 
 .lookbook-gallery
   text-align: center
