fix: link styling in shop announcement fields

--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -12,6 +12,11 @@
   width: 100%
   z-index: 1
 
+  a, a:visited
+    color: var(--primary-text-color)
+    text-decoration: underline
+    text-underline-offset: 3px
+
   @media screen and (max-width: $break-small)
     padding: 14px 64px
 
