--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -201,3 +201,13 @@
   .button
     max-width: 100%
     width: 100%
+
+.message-banner
+  &--cart
+    a, a:visited
+      color: var(--announcement-message-text-color)
+      text-decoration: underline
+      text-underline-offset: 3px
+
+      &:hover, &:focus
+        color: var(--announcement-message-text-color)
