--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -73,6 +73,51 @@
   opacity: #{"{% if theme.welcome_overlay_opacity == 'dark' %} 0.4 {% endif %}"}
   opacity: #{"{% if theme.welcome_overlay_opacity == 'very_dark' %} 0.7 {% endif %}"}
 
+#main 
+  .featured-container
+    margin: 20px auto 48px auto
+    max-width: 1024px
+
+  .featured-title
+    margin-bottom: 0
+
+  .featured-message
+    text-align: center
+    margin: 20px auto 40px auto
+    padding: 0 1.5rem
+
+    ol, ul
+      text-align: left
+      margin: 1em auto
+      max-width: 600px
+      padding-left: 2.5em
+
+      ol, ul
+        margin: 0.5em 0
+        padding-left: 1.5em
+
+    ul
+      list-style: disc
+
+    ol
+      list-style: decimal
+
+    a
+      text-decoration: underline
+      text-underline-offset: 3px
+
+    img
+      display: inline-block
+      max-width: 100%
+      margin: 0 auto
+      padding-bottom: 16px
+    
+    iframe
+      display: block
+      margin: 0 auto
+      max-width: 100%
+      margin-bottom: 16px
+
 .featured-category
   display: flex
   background-color: var(--accent-background-color)
