feat: text transform settings for header and footer

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -344,6 +344,9 @@ header, footer
 footer
   padding: 100px 0 60px
 
+  *
+    text-transform: #{"{{ theme.nav_text_transform_footer }}"}
+
   @media screen and (max-width: $break-small)
     padding: 60px 0 40px
 
