feat: setting to hide contact form

--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -42,15 +42,14 @@ textarea
     text-align: center
     width: 100%
 
-    a
+    a, a:visited
       text-decoration: underline
       display: inline
-      white-space: nowrap
 
     ul
       list-style: none
       padding: 0
-      margin: 10px 0
+      margin: 20px 0
       
     li
       text-align: center
