feat: add settings to control which pages display in header and footer, including restricting the total number

--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -4,6 +4,7 @@
   position: relative
   z-index: 10
   transition: box-shadow .2s linear
+  margin: 0 auto
 
   *
     text-transform: #{"{{ theme.nav_text_transform_header }}"}
@@ -166,6 +167,17 @@
     flex-direction: column
     gap: 16px
 
+    &--with-divider
+      position: relative
+      
+      &::before
+        content: ''
+        display: block
+        width: 30px
+        height: 1px
+        background-color: var(--border-color)
+        margin-bottom: 16px
+
     li a
       padding: 4px 0
       font-size: 1.1em
@@ -175,3 +187,4 @@
     left: -4px
     column-gap: 24px
     justify-content: flex-start
+    padding-top: 20px
