--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -242,6 +242,9 @@ a.button.all-products-button
     border-radius: var(--border-radius)
     width: 2em
     height: 3em
+    // Position arrows to center on the image area, excluding pagination space
+    top: calc(50% - 15px)
+    transform: translateY(-50%)
 
   .splide__pagination
     z-index: 3
