fix: prevent footer text links from breaking onto separate lines

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -372,19 +372,23 @@ footer
           margin-top: -20px
 
 .footer-custom-content
-  display: grid
-  grid-template-columns: 1fr
-  justify-content: center
+  display: block
   text-align: center
   padding: 10px 16px 40px 16px
-  gap: 20px
 
-  > *
-    justify-self: center
+  img
+    display: block
+    margin: 20px auto
+
+  a
+    text-decoration: underline
 
 .footer-store-name
   font-size: 1.5em
   line-height: 30px
+
+.footer-nav-social
+  margin: 20px 10px
 
 .footer-nav-links
   width: 100%
