feat: add support for price suffixes for future work

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -55,15 +55,19 @@
     line-height: normal
     display: inline-block
     padding: 4px 8px
-    margin-left: 8px
+    //margin-left: 8px
+    margin-bottom: 10px
     color: var(--product-status-text-color)
     background: var(--product-status-background-color)
     border-radius: var(--border-radius-sm)
+    flex-direction: row
 
   &__pricing
     display: flex
-    align-items: center
     font-size: 1.2em
+
+    .price-suffix
+      margin-left: 5px
 
   &__description
 
