--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -131,6 +131,9 @@ a.product-list-link
 .product-list-thumb-price
   font-size: .975rem
 
+.price-suffix
+  white-space: nowrap
+
 .pagination
   display: flex
   align-items: center
