feat: setting to shop product variant count on product grids

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -134,6 +134,10 @@ a.product-list-link
 .price-suffix
   white-space: nowrap
 
+.product-list-thumb-options-description
+  font-style: italic
+  font-size: .975rem
+
 .pagination
   display: flex
   align-items: center
