--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -328,7 +328,7 @@ a.header-store-link
   display: block
   object-fit: contain
   width: auto
-  max-height: calc(var(--logo-max-height-numeric) * 1px)
+  height: calc(var(--logo-max-size-numeric) * 1px)
   max-width: 90%
   margin: 0 auto
 
