--- a/source/stylesheets/maintenance.sass
+++ b/source/stylesheets/maintenance.sass
@@ -1,40 +1,64 @@
 
-
 #maintenance
-  padding: 100px 15px
+  +flexbox
+  +align-items(center)
+  +justify-content(center)
+  padding: 100px var(--spacing-unit)
+  min-height: 100vh
 
   @media screen and (max-width: $break-medium)
-    padding: 60px 20px
+    padding: 60px var(--spacing-unit)
 
-  h1
-    margin-bottom: 0
+  @media screen and (max-width: $break-small)
+    padding: 40px var(--spacing-unit)
 
-  .message-container
-    +flexbox
-    +align-items(center)
-    +justify-content(center)
-    +flex-direction(column)
-    font-size: 1.25em
-    margin: 0 auto
-    max-width: 600px
-    padding: 40px
-    text-align: center
-    width: 100%
+.maintenance-container
+  max-width: 600px
+  width: 100%
+  text-align: center
 
-    > * + *
-      margin-top: 40px
+.maintenance-store-name
+  font-family: var(--shop-name-font)
+  font-size: clamp(28px, 4vw, 48px)
+  line-height: 1.2
+  margin: 0 0 calc(var(--spacing-unit) * 2) 0
+  word-break: break-word
 
-    .store-name
-      font-size: 1.75em
+.maintenance-image
+  display: block
+  height: auto
+  margin: calc(var(--spacing-unit) * 3) auto
+  max-width: 100%
+  max-height: 40vh
+  width: auto
+  object-fit: contain
 
-    .social-icons
-      a
-        svg
-          width: 20px
-          height: 20px
+  @media screen and (max-width: $break-medium)
+    max-height: 30vh
+    margin: calc(var(--spacing-unit) * 2) auto
 
-      @media screen and (max-width: $break-small)
-        a
-          svg
-            width: 18px
-            height: 18px
+  @media screen and (max-width: $break-small)
+    max-height: 25vh
+
+.maintenance-message
+  font-size: clamp(16px, 2.5vw, 20px)
+  line-height: 1.4
+  margin: 0 0 calc(var(--spacing-unit) * 3) 0
+
+  @media screen and (max-width: $break-small)
+    margin-bottom: calc(var(--spacing-unit) * 2)
+
+  h1, h2
+    padding: var(--spacing-unit) 0
+
+.social-icons
+  a
+    svg
+      width: 20px
+      height: 20px
+
+  @media screen and (max-width: $break-small)
+    a
+      svg
+        width: 18px
+        height: 18px
