--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -1,3 +1,11 @@
+.product-password-form-container
+  margin: 40px auto
+  padding: 0 20px
+
+  h1
+    font-size: 1.5rem
+    margin-bottom: 16px
+
 .product-container
   display: grid
   grid-template-columns: 1fr 400px
