feat: new settings to control text scale easily without custom css

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -73,11 +73,11 @@
       padding-right: 0
 
   .product-name
-    font-size: 1.2em
+    font-size: 1.2rem
     word-break: break-word
 
   .option-name
-    font-size: 1em
+    font-size: 1rem
     margin-top: 4px
 
   input
@@ -142,7 +142,7 @@
     padding: .5em
     line-height: 1em
     font-weight: normal
-    font-size: .925em
+    font-size: 0.925rem
     padding: 8px 16px
     text-decoration: none
     width: auto
@@ -155,7 +155,7 @@
       margin-left: auto
 
   .cart-item-price
-    font-size: 1.1em
+    font-size: 1.1rem
     margin-left: auto
     min-width: 100px
     min-height: 42px
