--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -40,6 +40,13 @@
   --border-radius-sm: 2px
   --spacing-unit: 16px
   --logo-max-size-numeric: #{"{{ theme.logo_image_size }}"}
+  --font-scale: #{'{{ theme.global_text_scale | default: 1 }}'}
+  --shop-name-scale: #{'{{ theme.shop_name_text_scale | default: 1 }}'}
+  --product-grid-scale: #{'{{ theme.product_grid_scale | default: 1 }}'}
+  --product-title-scale: #{'{{ theme.product_page_heading_scale | default: 1 }}'}
+  --product-description-scale: #{'{{ theme.product_page_description_scale | default: 1 }}'}
+  --header-scale: #{'{{ theme.header_text_scale | default: 1 }}'}
+  --footer-scale: #{'{{ theme.footer_text_scale | default: 1 }}'}
 
 $break-extra-large: 1200px
 $break-large: 945px
