--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -39,7 +39,7 @@
     padding: 0
 
 .welcome-message
-  font-size: 3em
+  font-size: 3rem
   text-align: center
   padding: 0 var(--spacing-unit)
   width: 100%
@@ -47,10 +47,10 @@
   pointer-events: #{"{% if theme.hero_link != blank %} none {% else %} auto {% endif %}"}
 
   @media screen and (max-width: $break-medium)
-    font-size: 2.5em
+    font-size: 2.5rem
 
   @media screen and (max-width: $break-small)
-    font-size: 1.75em
+    font-size: 1.75rem
 
 .welcome-image
   border-radius: var(--border-radius)
@@ -81,9 +81,17 @@
   .featured-container
     margin: 20px auto 48px auto
     max-width: 1024px
+    font-size: 1rem
+
+    @media screen and (max-width: $break-medium)
+      font-size: 0.95rem
 
   .featured-title
     margin-bottom: 0
+    font-size: 1.75em
+
+    @media screen and (max-width: $break-small)
+      font-size: 1.5em
 
   .featured-message
     text-align: center
@@ -142,11 +150,11 @@
   flex-direction: column
   justify-content: center
   flex: 1
-  font-size: 1.7em
+  font-size: calc(1.7rem * var(--product-grid-scale, 1))
   gap: 50px
 
 a.featured-category-button
-  font-size: 1rem
+  font-size: calc(1rem * var(--product-grid-scale, 1))
   max-width: 275px
   position: relative
   width: 100%
