--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -39,7 +39,7 @@
   > a, .category-nav-heading
     display: flex
     position: relative
-    font-size: 1.3em
+    font-size: calc(1.3rem * var(--header-scale, 1))
     align-items: center
     gap: 8px
     outline-offset: 4px
@@ -71,7 +71,7 @@
   opacity: 0
   overflow-y: scroll
   padding: 10px 15px
-  font-size: 1rem
+  font-size: calc(1rem * var(--header-scale, 1))
   position: absolute
   text-align: left
   visibility: hidden
@@ -180,7 +180,7 @@
 
     li a
       padding: 4px 0
-      font-size: 1.1em
+      font-size: calc(1.1rem * var(--header-scale, 1))
 
   &__icons
     position: relative
