feat: option to set announcement message banner to scroll

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -25,6 +25,7 @@
 
   --announcement-background-color: #{'{{ theme.accent_background_color }}'}
   --announcement-text-color: #{'{{ theme.primary_text_color }}'}
+  --announcement-scroll-duration: #{'{{ theme.announcement_scroll_speed | default: "15s" }}'}
 
   --product-status-background-color: #{"{{ theme.product_status_background_color }}"}
   --product-status-text-color: #{"{{ theme.product_status_text_color }}"}
