--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -24,12 +24,12 @@
     display: flex
 
   &--scrolling
-    min-height: 64px
-    padding: 0
+    padding: 22px 0
     overflow: hidden
+    min-height: fit-content
 
     @media screen and (max-width: $break-small)
-      min-height: 48px
+      padding: 14px 0
 
   &__scroll-wrapper
     width: 100%
