--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -3,7 +3,7 @@
   background-color: var(--accent-background-color)
   color: var(--primary-text-color)
   display: none
-  font-size: 1rem
+  font-size: calc(1rem * var(--header-scale, 1))
   justify-content: center
   line-height: 1.25em
   padding: 22px 96px
