fix: announcement bar accessibility fixes when scrolling

--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -10,7 +10,7 @@
   position: relative
   text-align: center
   width: 100%
-  z-index: 1
+  z-index: 500
 
   a, a:visited
     color: var(--primary-text-color)
@@ -24,6 +24,7 @@
     display: flex
 
   &--scrolling
+    cursor: pointer
     padding: 22px 0
     overflow: hidden
     min-height: fit-content
@@ -40,7 +41,17 @@
     white-space: nowrap
     animation: scroll-announcement var(--announcement-scroll-duration) linear infinite
 
-    .announcement-message--scrolling:hover &
+  // Pause scrolling on hover (desktop) and focus (keyboard) for accessibility
+  &--scrolling
+    @media (hover: hover)
+      &:hover .announcement-message__scroll-content
+        animation-play-state: paused
+
+    &:focus-visible .announcement-message__scroll-content
+      animation-play-state: paused
+
+    // Pause when user taps on mobile (via JS class toggle)
+    &.is-paused .announcement-message__scroll-content
       animation-play-state: paused
 
   &__text
