--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -68,6 +68,9 @@
     .announcement-message--scrolling &
       display: inline-flex
       padding: 0 5em
+      // Prevent iOS Safari text inflation
+      -webkit-text-size-adjust: 100%
+      text-size-adjust: 100%
 
   &__close-button
     align-items: center
